# klyrsignals

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  Dockerfile.streamlit  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_verification.py
.github/: copilot-instructions.md
agents/: heimdall.md  pepper.md  peter.md  tony.md
alembic/: env.py
app/: config.py  database.py  exceptions.py  main.py  security.py
app/models/: __init__.py  account.py  analysis_result.py  connection.py  position.py  price_history.py  sector_weight.py  snapshot.py  user.py
app/routes/: accounts.py  analysis.py  connections.py  health.py  positions.py  users.py
app/schemas/: analysis.py  base.py  connection.py  position.py  user.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py
backend/prisma/: schema.prisma
backend/tests/: test_migration_endpoint.py
docs/: ADMIN_GUIDE.md  DECISIONS.md  DEPLOYMENT_CHECKLIST.md  FINAL_REPORT.md  FINAL_REPORT_v1.6.md  ISSUES.md  QA_v1.6_REPORT.md  RUN_STATE.md  USER_GUIDE.md
docs/agent-workflow/: ARCH.md  ARCH_BRIEF.md  ARCH_V1.5.md  ARCH_V1.6.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY_V1.6.md  ISSUES.md  OAUTH_IMPLEMENTATION.md  PETER_START_HERE.md  QA.md  (+6 more)
frontend/: Dockerfile  app.py  package-lock.json  package.json  requirements.txt  tailwind.config.ts  utils.py
tests/: test_concentration.py  test_context_generator.py  test_correlation.py  test_llm_connector.py  test_normalizer.py  test_security.py
ui/: app.py
(+64 files in other folders)
